# probe-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  eval_log.md  main.py  mcp_server.py  mcp_server_raw.py  northwind_api.py  pyproject.toml  ruff.toml
examples/: README.md
judge/: mcp_server_raw_2026-05-21_14-22_claude-haiku-4-5_6a51_judge_claude-haiku-4-5_77d0.json  mcp_server_semantic_2026-05-20_15-38_claude-haiku-4-5_62f7_judge_claude-haiku-4-5_c600.json  mcp_server_semantic_2026-05-20_15-42_claude-haiku-4-5_ace6_judge_claude-haiku-4-5_4c36.json  mcp_server_semantic_2026-05-20_22-39_claude-haiku-4-5_3241_judge_claude-haiku-4-5_13df.json  mcp_server_semantic_2026-05-20_23-54_claude-haiku-4-5_586e_judge_claude-haiku-4-5_a3f6.json  mcp_server_semantic_2026-05-20_23-54_claude-haiku-4-5_910b_judge_claude-haiku-4-5_8ab0.json  mcp_server_semantic_2026-05-20_23-55_claude-haiku-4-5_8265_judge_claude-haiku-4-5_f29e.json  mcp_server_semantic_2026-05-21_14-22_claude-haiku-4-5_9a03_judge_claude-haiku-4-5_5acc.json  mcp_server_semantic_2026-05-23_13-25_claude-haiku-4-5_58cb_judge_claude-haiku-4-5_84fa.json  mcp_server_semantic_2026-05-29_19-40_claude-haiku-4-5_3e1a_judge_claude-haiku-4-5_7090.json  mcp_server_semantic_2026-05-29_20-10_claude-haiku-4-5_1fac_judge_claude-haiku-4-5_34b7.json
probe/: cli.py  config.py  judge.py  judge_prompt.txt  loader.py  reporter.py  runner.py  scorer.py
results/: mcp_server_raw_2026-05-20_22-54_claude-haiku-4-5_4df9.json  mcp_server_raw_2026-05-20_22-55_claude-haiku-4-5_0615.json  mcp_server_raw_2026-05-20_23-01_claude-haiku-4-5_17d6.json  (+36 more)
(+72 files in other folders)
