[project]
name = "probe-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0",
    "click>=8.4.0",
    "fastmcp>=3.3.1",
    "mcp>=1.27.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]

[project.scripts]
probe-mcp = "probe.cli:cli"

[tool.setuptools.packages.find]
include = ["probe*"]
